--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'java'
 
-group = 'ru.asavt.spring.earn'
+group = 'ru'
 version = '0.0.1'
 sourceCompatibility = '1.8'
 
@@ -49,6 +49,12 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.0'
 
+    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+    compile('org.postgresql:postgresql')
+    compile('javax.xml.bind:jaxb-api')
+    compile('com.sun.xml.bind:jaxb-core')
+    compile('com.sun.xml.bind:jaxb-impl')
+    
 //    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
 //    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
 }
