--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 logging.level.org.springframework.web=DEBUG
 
+spring.datasource.url=jdbc:postgresql://localhost:5432/springtest
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
